k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-portfolio
  template:
    metadata:
      labels:
        app: react-portfolio
    spec:
      containers:
      - name: react-portfolio
        image: your_dockerhub_username/react-portfolio:latest
        ports:
        - containerPort: 80
