k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-portfolio
spec:
  selector:
    app: react-portfolio
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
