k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-portfolio-ingress
spec:
  rules:
    - host: <your_domain_or_external_ip>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-portfolio
                port:
                  number: 80
